Make sure session id's are visible as long as possible

--- a/ui-v2/app/styles/components/table.scss
+++ b/ui-v2/app/styles/components/table.scss
@@ -38,6 +38,7 @@ td strong {
   padding: 1px 5px;
   border-radius: $radius-small;
 }
+th,
 td:not(.actions),
 td:not(.actions) a {
   white-space: nowrap;
